<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainTabActivity!</string>
    <string name="app_name">卫星跟踪</string>
    <string name="main_stats">卫星</string>
    <string name="main_map">地图</string>
    <string name="main_more">更多</string>
    <string name="main_sky">极坐标图</string>
    <string name="main_pass">过顶预报</string>
    <string name="main_global">Global</string>
    <string name="title_activity_publicdata">PublicdataActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_adapter">MyAdapter</string>
    <string name="title_activity_data">Data</string>
    <string name="title_activity_d2">D2Activity</string>
    <string name="title_activity_a2">A2Activity</string>
    <string name="title_activity_a3">A3Activity</string>
    <string name="title_activity_share_preference_util">SharePreferenceUtil</string>
    <string name="username_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_str">登录</string>
    <string name="title_activity_edit_sat">EditSatActivity</string>
    <string name="header_spinner_01">Hello world!</string>

    <string-array name="spinnername">
        <item>map1</item>
        <item>map2</item>
        <item>map3</item>
    </string-array>

    <string name="title_activity_add_sat">AddSatActivity</string>

</resources>
