<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <FrameLayout 
            android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent" 
            android:layout_height="0.0dip" 
            android:layout_weight="1.0" />
        <TabWidget 
            android:id="@android:id/tabs" 
            android:visibility="gone" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="0.0" />

            <RadioGroup
                android:id="@id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:background="@drawable/maintab_toolbar_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton                      
                    android:id="@id/radio_button0"                   
                    android:text="@string/main_stats"                                                                                                                        
                	style="@style/main_tab_bottom" />                         	                             
                <RadioButton  
                    android:id="@id/radio_button1" 
                    android:text="@string/main_map"                     
                    style="@style/main_tab_bottom" />
                <RadioButton  
                    android:id="@id/radio_button2"  
                    android:text="@string/main_sky"                     
                    style="@style/main_tab_bottom" />
                <RadioButton  
                    android:id="@id/radio_button3" 
                    android:text="@string/main_pass"                      
                    style="@style/main_tab_bottom" />            
                <RadioButton
                    android:id="@id/radio_button4"
                    android:text="@string/main_more"
                    style="@style/main_tab_bottom" />

            </RadioGroup>
    </LinearLayout> 
</TabHost>


                    