<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="3dip" >

            <Button
                android:id="@+id/ButtonDone_a3"
                style="@style/main_tab_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="4.0dip"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip"
                android:paddingTop="8.0dip"
                android:text="返回"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="20px" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#FFFF00" />
        </LinearLayout>

        <TextView
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="@drawable/title_bg"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="卫星编辑登录"
            android:textColor="@color/black"
            android:textSize="20px" />
    </LinearLayout>
    <!-- 输入手机号框 -->
    <!-- 输入密码框 -->

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_word_ll"
        android:layout_margin="10dp"
        android:text="@string/login_str"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/center_point"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="69dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/user_login_icon" />

        <EditText
            android:id="@+id/user_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/username_hint"
            android:textColor="@color/black"
            android:textColorHint="#707070" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_word_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/user_login_lock" />

        <EditText
            android:id="@+id/pass_word_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#707070" />
    </LinearLayout>

</RelativeLayout>